update page for release 1.1.0

--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -928,7 +928,32 @@ material_page(
             <br>
             <div class="col s12 m6">
                 <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>CRAN</h1>
-                
+                                                <ul class="collection">
+                    <li class="collection-item">
+                        <h5>Version</h5>1.1.0</li>
+                    <li class="collection-item">
+                        <h5>Date</h5>5.16.2020</li>
+                    <li class="collection-item">
+                        <h5>New Functions</h5>
+                        None
+                    </li>
+         <li class="collection-item">
+                                <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                        <div class='my-code'>material_page()</div>
+                        <div class='my-code-black'>
+                            primary_theme_color, secondary_theme_color 
+                        </div>
+                        <br>
+                        <div class='my-code'>material_floating_button()</div>
+                        <div class='my-code-black'>
+                            pulse
+                        </div>
+                     
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v1.0.0</li>
+                </ul>
                                 <ul class="collection">
                     <li class="collection-item">
                         <h5>Version</h5>1.0.1</li>
@@ -1197,16 +1222,7 @@ material_page(
                     </li>
                     <li class="collection-item">
                                 <h5>Function Updates</h5>
-                          <i>New parameters</i><br>
-    <div class='my-code'>material_page()</div>
-        <div class='my-code-black'>
-            primary_theme_color, secondary_theme_color
-        </div>
-        <br>
-          <div class='my-code'>material_floating_button()</div>
-        <div class='my-code-black'>
-            pulse
-        </div>
+                          None
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v1.0.0</li>
