take out fixed nav bar

--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -9,11 +9,12 @@
 
 
     <!--Let browser know website is optimized for mobile-->
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shinymaterial</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="highlight_r/styles/tomorrow-night-eighties.css">
     <style>
+    
         .my-code {
             font-family: monospace;
             color: blue;
@@ -35,7 +36,7 @@
 
 
 <body class="grey lighten-4">
-    <div class="navbar-fixed">
+
         <nav>
             <div class="nav-wrapper">
                 <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial v1.1.0</a></div>
@@ -46,7 +47,9 @@
                 </div>
             </div>
         </nav>
-    </div>
+  
+    <div class="row">
+    <div class="col s12">
     <ul class="tabs tabs-fixed-width">
         <li class="tab">
             <a href="#about">About</a>
@@ -64,6 +67,8 @@
             <a href="#releases">Releases</a>
         </li>
     </ul>
+          </div>
+            </div>
     <div class="col s12" id="about">
         <div class="row">
             <div class="col s12 m8 offset-m2">
