--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -7,8 +7,9 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="css/materialize.min.css"> 
 
+
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>shinymaterial</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="highlight_r/styles/tomorrow-night-eighties.css">
@@ -35,7 +36,8 @@
 
 
 <body class="grey lighten-4">
-
+  
+    <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
                 <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial v1.1.0</a></div>
@@ -46,7 +48,8 @@
                 </div>
             </div>
         </nav>
-  
+    </div>
+    
     <div class="row">
     <div class="col s12">
     <ul class="tabs tabs-fixed-width">
