--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1246,7 +1246,9 @@ material_page(
                     </li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
-                        None
+                        <div class='my-code'>
+                            render_material_ui() <br>material_ui_output()
+                            </div>
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>
