--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1247,7 +1247,7 @@ material_page(
                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
-                            render_material_ui() <br>material_ui_output()
+                            render_material_from_server()
                             </div>
                     </li>
                     <li class="collection-item">
