--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1252,7 +1252,11 @@ material_page(
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>
-                        None
+                         <i>New parameters</i><br>
+                        <div class='my-code'>material_date_picker()</div>
+                        <div class='my-code-black'>
+                            value
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v1.0.0
