--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1257,6 +1257,11 @@ material_page(
                         <div class='my-code-black'>
                             value
                         </div>
+                        <br>
+                        <div class='my-code'>material_text_box()</div>
+                        <div class='my-code-black'>
+                            value
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v1.0.0
