--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -925,6 +925,36 @@ material_page(
             <br>
             <div class="col s12 m6">
                 <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>CRAN</h1>
+                                <ul class="collection">
+                    <li class="collection-item">
+                        <h5>Version</h5>1.2.0
+                    </li>
+                    <li class="collection-item">
+                        <h5>Date</h5>8.31.2020
+                    </li>
+                      <li class="collection-item">
+                        <h5>New Functions</h5>
+                        <div class='my-code'>
+                            render_material_from_server()
+                            </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Function Updates</h5>
+                         <i>New parameters</i><br>
+                        <div class='my-code'>material_date_picker()</div>
+                        <div class='my-code-black'>
+                            value
+                        </div>
+                        <br>
+                        <div class='my-code'>material_text_box()</div>
+                        <div class='my-code-black'>
+                            value
+                        </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v1.0.0
+                    </li>
+                </ul>
                 <ul class="collection">
                     <li class="collection-item">
                         <h5>Version</h5>1.1.0
@@ -1246,22 +1276,11 @@ material_page(
                     </li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
-                        <div class='my-code'>
-                            render_material_from_server()
-                            </div>
+                        None
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>
-                         <i>New parameters</i><br>
-                        <div class='my-code'>material_date_picker()</div>
-                        <div class='my-code-black'>
-                            value
-                        </div>
-                        <br>
-                        <div class='my-code'>material_text_box()</div>
-                        <div class='my-code-black'>
-                            value
-                        </div>
+                         None
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v1.0.0
